--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy>=1.21.0
 
 # Federated Learning
 flwr>=1.6.0
+flwr[simulation]
 
 # 설정 관리
 omegaconf>=2.3.0
@@ -21,3 +22,4 @@ seaborn>=0.11.0
 # Jupyter (선택사항)
 jupyter>=1.0.0
 notebook>=6.4.0 
+
