--- a/config/fl/fedbn.yaml
+++ b/config/fl/fedbn.yaml
@@ -19,7 +19,7 @@ fl:
 dataset:
   name: custom9
   root: data/train/raw
-  split_path: data/split/dirichlet_alpha5.json
+  split_path: data/split/quasi_iid.json
 
 fedbn:
   freeze_bn: true
