--- a/config/fl/fedprox.yaml
+++ b/config/fl/fedprox.yaml
@@ -4,20 +4,20 @@ model:
 
 train:
   strategy: fedprox
-  mu: 0.05  # FedProx proximal term 강도 (0.01~1.0 권장)
-  rounds: 50
+  mu: 0.02  # FedProx proximal term 강도 (0.01~1.0 권장)
+  rounds: 22
   local_epochs: 5
   batch_size: 32
   lr: 0.001
   optimizer: adam
-  clients_per_round: 5
+  clients_per_round: 30
 
 fl:
-  fraction_fit: 1.0
-  min_fit_clients: 5
-  min_available_clients: 5
+  fraction_fit: 0.4
+  min_fit_clients: 12
+  min_available_clients: 12
 
 dataset:
   name: custom9
   root: data/train/raw
-  split_path: data/split/dirichlet_alpha5.json
+  split_path: data/split/client30.json
